unpackaged/main/default/objects/PS_QA_Scorecard__c/PS_QA_Scorecard__c.object-meta.xml
<CustomObject>
    <description>QA Scorecard</description>
    <label>QA Scorecard</label>
    <nameField>
        <displayFormat>QA-{000000}</displayFormat>
        <label>QA Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>