unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Acceptance_Letter__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Letter__c</fullName>
    <label>Acceptance Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Burn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>