unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Access_Able_Comments__c.field-meta.xml
<CustomField>
    <fullName>Access_Able_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Access Able Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>