unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Access_Able_Setup_Bill_Shows__c.field-meta.xml
<CustomField>
    <fullName>Access_Able_Setup_Bill_Shows__c</fullName>
    <label>Access Able Setup &amp; Bill Shows</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>