unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/AccessAble_access__c.field-meta.xml
<CustomField>
    <fullName>AccessAble_access__c</fullName>
    <label>AccessAble access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>