unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Acknowledgement_email_sent_comments__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_email_sent_comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acknowledgement email sent comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>