unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Acknowledgment_email_sent_within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_email_sent_within_SLA__c</fullName>
    <inlineHelpText>Acknowledgement email sent within 24 hours</inlineHelpText>
    <label>Acknowledgment email sent within SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>