unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Acknowledgment_to_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_to_Submitter__c</fullName>
    <label>Acknowledgment to Submitter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>