unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Acknowledgment_to_Submitter_Comments__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_to_Submitter_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acknowledgment to Submitter Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>