unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Additional_Services_Added__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services_Added__c</fullName>
    <label>Additional Services Added</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>