unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Additional_Services_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Services Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>