unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/All_Enrollers_Comments__c.field-meta.xml
<CustomField>
    <fullName>All_Enrollers_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>All Enrollers Comments</label>
    <type>TextArea</type>
</CustomField>