unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/All_Holds_Removed__c.field-meta.xml
<CustomField>
    <fullName>All_Holds_Removed__c</fullName>
    <label>All Holds Removed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>