unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/All_Holds_Removed_Comments__c.field-meta.xml
<CustomField>
    <fullName>All_Holds_Removed_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>All Holds Removed Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>