unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/All_Information_Requested__c.field-meta.xml
<CustomField>
    <fullName>All_Information_Requested__c</fullName>
    <inlineHelpText>All Information needed was Requested during Scrub</inlineHelpText>
    <label>All Information Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>