unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/All_Parties_Kept_Informed__c.field-meta.xml
<CustomField>
    <fullName>All_Parties_Kept_Informed__c</fullName>
    <label>All Parties Kept Informed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>