unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/All_Parties_Kept_Informed_Comments__c.field-meta.xml
<CustomField>
    <fullName>All_Parties_Kept_Informed_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>All Parties Kept Informed Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>