unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Amendment_Created_Completed__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Created_Completed__c</fullName>
    <label>Amendment Created/Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>