unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Amendment_Matches_System_Work_Request__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Matches_System_Work_Request__c</fullName>
    <inlineHelpText>Amendment Matches System Work, Request and Contract Language Variable</inlineHelpText>
    <label>Amendment Matches System Work/Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>