unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Amendment_NOC__c.field-meta.xml
<CustomField>
    <fullName>Amendment_NOC__c</fullName>
    <label>Certificate Amendment / NOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>