unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Amendment_NOC_Comments__c.field-meta.xml
<CustomField>
    <fullName>Amendment_NOC_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Certificate Amendment / NOC Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>