unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Amendment_Points_Missed__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Points_Missed__c</fullName>
    <formula>IF (TEXT(Reviewed_within_allotted_time__c)   = &quot;No&quot;,10,0) + 
IF (TEXT(All_Information_Requested__c ) = &quot;No&quot;,15,0) + 
IF (TEXT(Census_Validation__c) = &quot;No&quot;,15,0) +
IF (TEXT( Underwriting_Approval_Checked_Requested__c ) = &quot;No&quot;,5,0) +
IF (TEXT( Sent_to_Retro_or_UW_within_24_hours__c) = &quot;No&quot;,3,0) +
IF (TEXT(Bill_Hold_PS_Issue_Flag_Fillped__c) = &quot;No&quot;,3,0) +
IF (TEXT( Salesforce_Setup__c ) = &quot;No&quot;,15,0) +
IF (TEXT(Native_System_Work_Correct__c) = &quot;No&quot;,15,0) + 
IF (TEXT ( Cells_Added_Removed__c ) = &quot;No&quot;,3,0) + 
IF (TEXT(No_Halt_Errors__c) = &quot;No&quot;,3,0) +
IF (TEXT(Risk_Reallocation_Ran__c) = &quot;No&quot;,5,0) + 
IF (TEXT(Pre_Work_Notional_MBSR_Ran__c) = &quot;No&quot;,5,0)+ 
IF (TEXT( Pending_Underwriting_Decisions__c ) = &quot;No&quot;,5,0)+
IF (TEXT ( Correct_Form_Number_Used__c) = &quot;No&quot;,3,0) +
IF (TEXT ( Correct_Amendment_Number_Used__c) = &quot;No&quot;,3,0) +
IF (TEXT ( Effective_Date_Matches_Request__c) = &quot;No&quot;,2,0) +
IF (TEXT ( NOC_Generated_for_each_Class__c) = &quot;No&quot;,3,0) +
IF (TEXT ( Amendment_Matches_System_Work_Request__c) = &quot;No&quot;,15,0) + 
IF (TEXT ( Riders_Included__c) = &quot;No&quot;,3,0) +
IF (TEXT (   New_Documents_Generated__c) = &quot;No&quot;,5,0) +
IF  (Text(Notional_Bill_Ran__c) = &quot;No&quot;,5,0) +
IF (TEXT(Recon_Complete__c) = &quot;No&quot;,15,0) +
IF  (TEXT(Recon_differences_noted_addressed__c) = &quot;No&quot;,7,0) + 
IF  (Text(Member_Impacted_by_Change_Noted__c) = &quot;No&quot;,10,0) + 
IF  (Text( Unlinked_Bill_Details__c ) = &quot;No&quot;,10,0) + 
IF (TEXT (  Case_Created_for_Central_Record__c ) = &quot;No&quot;,5,0) + 
IF (TEXT ( Final_Policy_Certificates_in_Docfinity__c) = &quot;No&quot;,5,0) + 
IF (Text(Released_to_Correct_Parties__c) = &quot;No&quot;,5,0) + 
IF (TEXT(Reinsurer_With_Correct_Documents__c) = &quot;No&quot;,5,0) + 
IF (TEXT ( Sent_to_Claims__c) = &quot;No&quot;,5,0) +
IF (TEXT(Access_Able_Setup_Bill_Shows__c) = &quot;No&quot;,2,0) +
IF (TEXT( Bill_Hold_Removed_PS_Issue_Flag__c) = &quot;No&quot;,5,0) +
IF (TEXT ( Closed_Issued_Closed__c) = &quot;No&quot;,1,0) +  
IF (TEXT( Documents_in_Postmaster__c) = &quot;No&quot;,10,0) +
IF (TEXT ( Notes_In_CSW__c) = &quot;No&quot;,5,0) +
IF (TEXT (  Member_Apps_Moved_Out_Docfinity__c ) = &quot;No&quot;,1,0) +
IF (TEXT ( Docfinity_Notations_Added__c) = &quot;No&quot;,3,0) +
IF (Text ( Completed_Within_SLA_Guidelines__c) = &quot;No&quot;,10,0) +
IF (TEXT ( Responded_to_Questions_within_24_hours__c) = &quot;No&quot;,5,0) +
IF (TEXT ( Regular_Follow_ups_Sent_fr_Information__c) = &quot;No&quot;,2,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment Points Missed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>