unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Appl_Elect_Form_New_Hire_Comments__c.field-meta.xml
<CustomField>
    <fullName>Appl_Elect_Form_New_Hire_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appl/Elect Form- New Hire Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>