unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Appl_Elect_Form_New_Hire_Scor__c.field-meta.xml
<CustomField>
    <fullName>Appl_Elect_Form_New_Hire_Scor__c</fullName>
    <formula>IF (  Application_Election_Form_New_Hire__c  = true,25,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appl/Elect Form- New Hire Scor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>