unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Application_Election_Form_Existing_Empl__c.field-meta.xml
<CustomField>
    <fullName>Application_Election_Form_Existing_Empl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application/Election Form- Existing Empl</label>
    <type>Checkbox</type>
</CustomField>