unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Application_Election_Form_New_Hire__c.field-meta.xml
<CustomField>
    <fullName>Application_Election_Form_New_Hire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application/Election Form- New Hire</label>
    <type>Checkbox</type>
</CustomField>