unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Application_Followed_Into_Docfinity__c.field-meta.xml
<CustomField>
    <fullName>Application_Followed_Into_Docfinity__c</fullName>
    <inlineHelpText>Application followed into Docfinity &amp; Processed</inlineHelpText>
    <label>Application Followed In Docfinity &amp; Pro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>