unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Application_in_Docfinity_Comments__c.field-meta.xml
<CustomField>
    <fullName>Application_in_Docfinity_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application in Docfinity Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>