unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Approval_Letter_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Letter_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Letter Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>