unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Approval_Letter_Sent_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Approval_Letter_Sent_Acknowledged__c</fullName>
    <label>Approval Letter Sent/Acknowledged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>