unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Approvals_Received__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Received__c</fullName>
    <label>Approvals Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>