unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Asked_relevant_questions__c.field-meta.xml
<CustomField>
    <fullName>Asked_relevant_questions__c</fullName>
    <label>Asked relevant questions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>