unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Audit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Audit_Percentage__c</fullName>
    <formula>Total_Audit_Score__c  / 215</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>