unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auditor</label>
    <length>18</length>
    <type>Text</type>
</CustomField>