unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Auditor_of_Q_A_Manager__c.field-meta.xml
<CustomField>
    <fullName>Auditor_of_Q_A_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditor of Q/A (Manager)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Scorecards1</relationshipName>
    <type>Lookup</type>
</CustomField>