unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Benefit_and_GI_Amount_Correct__c.field-meta.xml
<CustomField>
    <fullName>Benefit_and_GI_Amount_Correct__c</fullName>
    <label>Benefit and GI Amount Correct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>