unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Benefit_Options_Member_Grp_Lvl_Correct__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Options_Member_Grp_Lvl_Correct__c</fullName>
    <label>Benefit Options - Member Grp Lvl Correct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>