unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Benefit_Options_Scheme_Comments__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Options_Scheme_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefit Options - Scheme Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>