unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Benefit_Summary_Benefits_Comments__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Summary_Benefits_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefit Summary Benefits Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>