unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Benefit_Summary_Correct_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Summary_Correct_Benefits__c</fullName>
    <inlineHelpText>Benefit Summary Correct Benefits/Provisions</inlineHelpText>
    <label>Benefit Summary Correct Benefits/Prov</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>