unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Bill_Hold_PS_Comments__c.field-meta.xml
<CustomField>
    <fullName>Bill_Hold_PS_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill Hold PS Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>