unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Bill_Hold_PS_Issue_Flag_Fillped__c.field-meta.xml
<CustomField>
    <fullName>Bill_Hold_PS_Issue_Flag_Fillped__c</fullName>
    <label>Bill Hold PS Issue Flag Flipped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>