unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Bill_Hold_Removed_After_Bill_Ran__c.field-meta.xml
<CustomField>
    <fullName>Bill_Hold_Removed_After_Bill_Ran__c</fullName>
    <label>Bill Hold Removed After Bill Ran</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>