unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Bill_Hold_Removed_PS_Issue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Bill_Hold_Removed_PS_Issue_Flag__c</fullName>
    <inlineHelpText>Bill Hold Removed; PS Issued Flag Flipped - Group Issue &amp; Upsell,  Bill, Notional, Risk Hold Removed; PS Issue Flag Flipped, Active Status - Amendments</inlineHelpText>
    <label>Bill Hold Removed PS Issue Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>